# HE-lutEval-CKKS

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md
include/: common.h  generateLUT.h  types.hpp
include/proposedMethod/: comparision.h  utils.h
src/: gen_keys.cpp  gen_tables.cpp  main_Li.cpp  main_oneinput.cpp  main_threeinput.cpp  main_twoinput.cpp
src/proposedMethod/: comparision.cpp  generateLUT.cpp  utils.cpp
